[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rtvortex-sdk"
dynamic = ["version"]
description = "Python SDK for the RTVortex AI code review API"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Auralith AI", email = "team@auralith.ai" }]
keywords = ["ai", "code-review", "pull-request", "devops", "llm", "rtvortex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.0",
    "mypy>=1.7.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/AuralithAI/RT-AI-PR-Reviewer"
Documentation = "https://docs.auralith.ai/sdk/python"
Repository = "https://github.com/AuralithAI/RT-AI-PR-Reviewer"
Issues = "https://github.com/AuralithAI/RT-AI-PR-Reviewer/issues"

[tool.hatch.version]
path = "src/rtvortex_sdk/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["src/rtvortex_sdk/"]

[tool.hatch.build.targets.wheel]
packages = ["src/rtvortex_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
